parlassets/scss/_labeled_chart_list.scss
%labeled-chart-list {
  margin: 0 0 15px 0;
  padding: 0;
  list-style: none;
  .labeled-chart {
    @extend %flex;
    line-height: 1.2em;
    .column {
      font-family: Roboto, sans-serif;
      font-size: 18px;
      font-weight: 300;
      margin: 0;
      text-align: left;
      &.chart { margin-left: 10px; }
      @include respond-to(mobile) { font-size: 14px; }
    }
  }
}

.party-list {
  @extend %labeled-chart-list;

  .loader {
    padding: 10px 0;
    text-align: center;
    .nalagalnik { height: 300px; }
  }
  .labeled-chart {
    padding: 5px 0;
    .column.chart-label {
      flex: none;
      width: 136px;
      @include respond-to(mobile) { width: 60px; }
    }
    @include respond-to(mobile) { padding: 4px 0; }
  }
}

.word-list {
  @extend %labeled-chart-list;
  .labeled-chart {
    padding: 9px 0;
    .column {
      &.chart-label { flex: 2; }
      &.chart {
        flex: 2 0;
        @include respond-to(desktop) { flex: 3 0; }
      }
    }
  }
}

